# pacing

./: Cargo.toml  index.html
assets/: manifest.json  sw.js
crates/pacing_core/: Cargo.toml
crates/pacing_core/src/: config.rs  lib.rs  lingo.rs  mechanics.rs
crates/pacing_egui/: Cargo.toml
crates/pacing_egui/src/: lib.rs  main.rs  main_window.rs  progress.rs  view.rs
crates/pacing_headless/: Cargo.toml
crates/pacing_headless/src/: main.rs
crates/pacing_tui/: Cargo.toml  log.txt
crates/pacing_tui/src/: main.rs
src/: format.rs  lib.rs  main.rs  main_window.rs  mechanics.rs  progress.rs  rand.rs
