[workspace]
members = [ "crates/*" ]
default-members = [ "crates/pacing_egui" ]
resolver = "2"
package = { license = "OBSD", rust-version = "1.66" }

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2

[patch.crates-io]
# egui     = { path = "c:/dev/forks/egui/crates/egui" }
# eframe   = { path = "c:/dev/forks/egui/crates/eframe" }
# fastrand = { path = "c:/dev/forks/fastrand" }
