[workspace]
members = [ "crates/*" ]
default-members = [ "crates/pacing_egui" ]
resolver = "2"
package = { license = "OBSD", rust-version = "1.66" }

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2

[patch.crates-io]
egui     = { path = "c:/dev/forks/egui/crates/egui" }
eframe   = { path = "c:/dev/forks/egui/crates/eframe" }
# fastrand = { path = "c:/dev/forks/fastrand" }

# [patch.crates-io]
# eframe = { git = "https://github.com/emilk/egui", rev = "34f587d1e1cc69146f7a02f20903e4f573030ffd" }
# egui = { git = "https://github.com/emilk/egui", rev = "34f587d1e1cc69146f7a02f20903e4f573030ffd" }
