[package]
name = "pacing_egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.20.1", features = ["persistence"] }
egui = "0.20.1"
pacing_core = { version = "0.1.0", path = "../pacing_core" }
