[package]
name = "pacing_egui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.20.1", default-features = false, features = ["glow", "persistence"] }
egui = "0.20.1"
image = { version = "0.24.5", default-features = false, features = ["png"] }
pacing_core = { version = "0.1.0", path = "../pacing_core" }
tray-icon = "0.2.0"
